--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   },
   "scripts": {
     "newversion": "npm update && rm -rf build/ && npm run build && npm version patch --no-git-tag-version && npm run github && npm publish ./",
-    "demo": "cd examples && export NODE_ENV=development && webpack-dev-server --config ./webpack.config.js --mode development --port 4000 --hot --inline",
-    "build": "export NODE_ENV=production && webpack --mode production",
+    "demo": "cd examples && webpack-dev-server --config ./webpack.config.js --mode development --port 4000 --hot --inline --env.NODE_ENV=development",
+    "build": "webpack --mode production --env.NODE_ENV=production",
     "github": "git add --all  && git commit -m \"New version $npm_package_version. Read more https://github.com/jodit/jodit-react/releases/tag/$npm_package_version \" && git tag $npm_package_version && git push --tags origin HEAD:master"
   },
   "repository": {
